# derive-props-with-const-generics

./: Cargo.toml  Dioxus.toml
src/: main.rs
