[package]
name = "derive-props-with-const-generics"
version = "0.1.0"
authors = ["syr <user@syrflover.co>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dioxus-web = { version = "0.4" }
dioxus-web = { path = "../dioxus/packages/web" }
# dioxus = { version = "0.4" }
dioxus = { path = "../dioxus/packages/dioxus" }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

console_error_panic_hook = "0.1.7"
