[package]
name = "derive-props-with-const-generics"
version = "0.1.0"
authors = ["syr <user@syrflover.co>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dioxus-web = { version = "0.4" }
dioxus-web = { git = "https://github.com/syrflover/dioxus", branch = "fix-syntax-error-at-derive-props-using-const-generics" }
# dioxus = { version = "0.4" }
dioxus = { git = "https://github.com/syrflover/dioxus", branch = "fix-syntax-error-at-derive-props-using-const-generics" }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

console_error_panic_hook = "0.1.7"
